Fix flickering drop downs stuffs in search page in IE11

--- a/app/assets/styles/_react-select.scss
+++ b/app/assets/styles/_react-select.scss
@@ -11,9 +11,6 @@ $selectDropdownAfterMarginTop: 4px;
 $selectDropdownPaddingRight: 4px;
 
 .app-Select {
-  display: flex;
-  flex: 1;
-
   .app-Select__control {
     border: $selectBorderWidth solid $input-border;
     border-radius: $selectBorderRadius;
